--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,9 +2,9 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
+    top:10vh;
+    left:10vh;
 
     // Positioning context for the mobile navigation icon
     position: relative;
@@ -163,6 +163,9 @@
  */
 .page-content {
     padding: $spacing-unit 0;
+    left:30vh;
+    top:10vh;
+    position:relative;
 }
 
 .page-heading {
